# ProjectKidsSocial

./: Cargo.toml  README.md  log.txt  tailwind.config.js
locales/de/: main.ftl
locales/en/: main.ftl
src/: app.rs  lib.rs  main.rs  models.rs
src/components/: mod.rs  post_card.rs
src/pages/: auth.rs  feed.rs  landing.rs  mod.rs
style/: tailwind.css
